// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Atoms/Bullet Amenity 1`] = `
<div
  data-testid="amenity-bullet--atom"
>
  <div
    className="flex items-center p--4 w--50p"
  >
    <svg
      viewBox="0 0 32 32"
      width={24}
    >
      <path
        d="M26 1a5 5 0 0 1 5 5c0 6.389-1.592 13.187-4 14.693V31h-2V20.694c-2.364-1.478-3.942-8.062-3.998-14.349L21 6l.005-.217A5 5 0 0 1 26 1zm-9 0v18.118c2.317.557 4 3.01 4 5.882 0 3.27-2.183 6-5 6s-5-2.73-5-6c0-2.872 1.683-5.326 4-5.882V1zM2 1h1c4.47 0 6.934 6.365 6.999 18.505L10 21H3.999L4 31H2zm14 20c-1.602 0-3 1.748-3 4s1.398 4 3 4 3-1.748 3-4-1.398-4-3-4zM4 3.239V19h3.995l-.017-.964-.027-.949C7.673 9.157 6.235 4.623 4.224 3.364l-.12-.07zm19.005 2.585L23 6l.002.31c.045 4.321 1.031 9.133 1.999 11.39V3.17a3.002 3.002 0 0 0-1.996 2.654zm3.996-2.653v14.526C27.99 15.387 29 10.4 29 6a3.001 3.001 0 0 0-2-2.829z"
      />
    </svg>
    <p
      className="m-l--16 weight--100"
    >
      Kitchen
    </p>
  </div>
</div>
`;

exports[`Storyshots Atoms/Bullet Bring 1`] = `
<div
  data-testid="bring-bullet--atom"
>
  <div
    className="flex"
  >
    <div
      className="m-r--16"
    >
      <svg
        viewBox="0 0 32 32"
        width={24}
      >
        <path
          d="m16 1c8.2842712 0 15 6.71572875 15 15 0 8.2842712-6.7157288 15-15 15-8.28427125 0-15-6.7157288-15-15 0-8.28427125 6.71572875-15 15-15zm0 2c-7.17970175 0-13 5.82029825-13 13 0 7.1797017 5.82029825 13 13 13 7.1797017 0 13-5.8202983 13-13 0-7.17970175-5.8202983-13-13-13zm7 7.5857864 1.4142136 1.4142136-10.9142136 10.9142136-5.91421356-5.9142136 1.41421356-1.4142136 4.5 4.4992136z"
        />
      </svg>
    </div>
    <div>
      <p>
        Description here
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms/Bullet Characteristic 1`] = `
<div
  data-testid="characteristic-bullet--atom"
>
  <div
    className="flex m-v--8 items-center p-r--8"
  >
    <div
      className="m-r--14"
    >
      <svg
        viewBox="0 0 32 32"
        width={24}
      >
        <path
          d="M17.954 2.781l.175.164 13.072 12.842-1.402 1.426-1.8-1.768L28 29a2 2 0 0 1-1.85 1.994L26 31H6a2 2 0 0 1-1.995-1.85L4 29V15.446l-1.8 1.767-1.4-1.426L13.856 2.958a3 3 0 0 1 4.097-.177zm-2.586 1.503l-.096.088L6 13.48 6 29l5-.001V19a2 2 0 0 1 1.85-1.995L13 17h6a2 2 0 0 1 1.995 1.85L21 19v9.999h5V13.48l-9.3-9.135a1.001 1.001 0 0 0-1.332-.06zM19 19h-6v9.999h6z"
        />
      </svg>
    </div>
    <div>
      <h3
        className="ls--3 m-b--4 c--gray__3 size--16 weight--500"
      >
        Entire home
      </h3>
      <p
        className="c--gray__1 weight--100 size--14"
      >
        You’ll have the farm stay to yourself.
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms/Bullet Check 1`] = `
<div
  data-testid="check-bullet--atom"
>
  <div
    className="flex items-center"
  >
    <div
      className="m-r--8"
    >
      <svg
        stroke="green"
        strokeWidth={2}
        viewBox="0 0 32 32"
        width={24}
      >
        <path
          d="m4 16.5 8 8 16-16"
          fill="none"
        />
      </svg>
    </div>
    <div>
      <h4
        className="size--18 c--gray__1"
      >
        Title here
      </h4>
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms/Bullet Experience 1`] = `
<div
  data-testid="experience-bullet--atom"
>
  <div
    className="flex items-center"
  >
    <div
      className="m-r--16"
    >
      <svg
        viewBox="0 0 24 24"
        width={36}
      >
        <path
          d="m16.7597838 18.236214c2.9023982.9912096 4.8547348 2.9095164 5.2334132 5.1815865.0453975.2723852-.1386123.5299989-.4109975.5753965-.2723852.0453975-.5299989-.1386123-.5753965-.4109975-.2434308-1.4605852-1.3196462-2.7852247-3.006803-3.7148829v3.6326834c0 .2761424-.2238576.500078-.5.500078s-.5-.2239356-.5-.500078v-4.1073852c-.3178327-.1291113-.6515089-.245905-1-.3491799v3.4565651c0 .2761424-.2238576.5-.5.5h-7c-.27614237 0-.5-.2238576-.5-.5v-3.4837989c-.34920291.0996989-.68279767.2128777-1 .3384673v4.1453316c0 .2761424-.22385763.500078-.5.500078s-.5-.2239356-.5-.500078v-3.6797858c-1.69506802.9212223-2.7555773 2.2546309-3.00680304 3.7619853-.04539752.2723852-.30301129.456395-.57539645.4109975-.27238516-.0453976-.456395-.3030113-.41099747-.5753965.38616693-2.3170016 2.2930421-4.2301789 5.20614625-5.2044819-.35823846-.3013528-.6950518-.6373923-1.00654353-1.0054553-.37573893.1651947-.78491908.2525379-1.20640576.2525379-1.65685425 0-3-1.3431458-3-3 0-.3027309.04502163-.5995648.1321259-.8828028-.71244196-.6542578-1.1321259-1.5812644-1.1321259-2.5775984 0-1.46793141.91006526-2.74734578 2.22575914-3.26095339-.14814337-.39130626-.22575914-.80974601-.22575914-1.23904661 0-1.93299662 1.56700338-3.5 3.5-3.5.29654618 0 .58825457.03700764.86986971.1090644.75569118-1.85180097 2.56963834-3.1090644 4.63013029-3.1090644 2.0604919 0 3.8744391 1.25726343 4.6301303 3.1090644.2816151-.07205676.5733235-.1090644.8698697-.1090644 1.9329966 0 3.5 1.56700338 3.5 3.5 0 .4293006-.0776158.84774035-.2257591 1.23904661 1.3156938.51360761 2.2257591 1.79302198 2.2257591 3.26095339 0 .996334-.4196839 1.9233406-1.1321259 2.5775984.0871043.283238.1321259.5800719.1321259.8828028 0 1.6568542-1.3431458 3-3 3-.4214675 0-.8306297-.0873353-1.2063546-.2525154-.3192893.3773198-.6653138.7210707-1.0338616 1.0283282zm-7.7597838 1.110018v2.653768h6v-2.6538008c-.9359992.425507-1.9509207.6538008-3 .6538008-1.0488055 0-2.0637377-.228128-3-.653768zm-2.16119825-2.9433234c1.31794986 1.6438816 3.17400865 2.5970914 5.16119825 2.5970914 1.9884133 0 3.8447911-.954764 5.1611622-2.5969798.0135699-.0419726.0329643-.0828358.0584159-.1214735.402034-.610322.7447971-1.2877825 1.0189462-2.0156674-1.3238875-.5107719-2.2385243-1.7945385-2.2385243-3.2658793 0-.4294038.0776531-.8479416.225866-1.23932884-.4488995-.1755314-.8563284-.44228731-1.1970469-.78204121-.8602044.65605286-1.9163511 1.02137005-3.0288191 1.02137005s-2.16861468-.36531719-3.02881906-1.02137005c-.3407185.3397539-.74814739.60650981-1.19704694.78204121.1482129.39138734.225866.80992504.225866 1.23932884 0 1.4713408-.91463679 2.7551074-2.2385243 3.2658793.27414913.7278849.61691218 1.4053454 1.01894615 2.0156674.02542905.0386034.04481169.0794284.0583799.1213619zm12.16119825.0574926c1.1045695 0 2-.8954305 2-2 0-.2917161-.0621791-.573685-.1807516-.8323254-.0988468-.215613-.0326037-.4710039.1585815-.6113886.6381817-.4686084 1.0221701-1.2101574 1.0221701-2.0166872 0-1.20457942-.8584553-2.23190311-2.0269705-2.45540423-.3423492-.0654809-.5143359-.45235494-.333586-.75038207.2347346-.38703911.3605565-.83077809.3605565-1.2942137 0-1.38071187-1.1192881-2.5-2.5-2.5-.3425741 0-.6746455.06865643-.9820556.20012585-.2758963.11799202-.5928572-.03190503-.6766961-.32002295-.4926984-1.69318965-2.0507952-2.8801029-3.8412483-2.8801029s-3.34854995 1.18691325-3.84124827 2.8801029c-.08383893.28811792-.40079982.43801497-.67669615.32002295-.30741003-.13146942-.63948151-.20012585-.98205558-.20012585-1.38071187 0-2.5 1.11928813-2.5 2.5 0 .46343561.12582189.90717459.36055652 1.2942137.18074993.29802713.0087632.68490117-.33358598.75038207-1.1685152.22350112-2.02697054 1.25082481-2.02697054 2.45540423 0 .8065298.38398841 1.5480788 1.02217013 2.0166872.19118513.1403847.25742822.3957756.15858148.6113886-.11857248.2586404-.18075161.5406093-.18075161.8323254 0 1.1045695.8954305 2 2 2 .22416468 0 .4424599-.0367809.64834795-.1072621-.40607285-.6949771-.74490529-1.454694-1.00750995-2.261808-.092082-.2830135.08193433-.583311.37326785-.644143 1.14894855-.2399065 1.98589415-1.2580044 1.98589415-2.4471881 0-.4634356-.12582189-.9071746-.36055652-1.2942137-.18074993-.29802713-.0087632-.68490117.33358598-.75038207.61922765-.11843925 1.16871021-.46870406 1.54120119-.97423467.17788399-.2414174.52679294-.27303797.74518013-.06753344.73723387.69374448 1.70747812 1.08636388 2.74058922 1.08636388s2.0033554-.3926194 2.7405892-1.08636388c.2183872-.20550453.5672962-.17388396.7451802.06753344.3724909.50553061.9219735.85579542 1.5412011.97423467.3423492.0654809.5143359.45235494.333586.75038207-.2347346.3870391-.3605565.8307781-.3605565 1.2942137 0 1.1891837.8369456 2.2072816 1.9858942 2.4471881.2913335.060832.4653498.3611295.3732678.644143-.2626047.807114-.6014371 1.5668309-1.00751 2.261808.2058881.0704812.4241833.1072621.648348.1072621zm-5.4994991-.9834994c.0072117-.1532986.0846601-.3012677.222149-.3929269.2297643-.1531763.540199-.0910893.6933752.138675l.5.75c.1531763.2297643.0910893.540199-.138675.6933752-.2297643.1531763-.540199.0910893-.6933752-.138675l-.084603-.1269044c-.471871.4035626-1.1480328.5995543-1.9993719.5995543s-1.5275009-.1959917-1.9993719-.5995543l-.08460295.1269044c-.15317623.2297643-.4636109.2918513-.69337525.138675-.22976434-.1531762-.29185128-.4636109-.13867505-.6933752l.5-.75c.15317623-.2297643.46361095-.2918513.69337525-.138675.1374889.0916592.2149373.2396283.222149.3929269.2539524.3412073.7351995.5230982 1.5005009.5230982s1.2465485-.1818909 1.5005009-.5230982zm-5.41652605-2.754305c.31798843-.4769827.80932294-.7226499 1.41602515-.7226499.6067022 0 1.0980367.2456672 1.4160251.7226499.1531763.2297643.0910893.540199-.138675.6933752s-.540199.0910893-.6933752-.138675c-.12645606-.1896841-.30178822-.2773501-.5839749-.2773501s-.45751884.087666-.58397485.2773501c-.15317623.2297643-.4636109.2918512-.69337525.138675-.22976434-.1531762-.29185128-.4636109-.13867505-.6933752zm5.00000005 0c.3179884-.4769827.8093229-.7226499 1.4160251-.7226499s1.0980367.2456672 1.4160251.7226499c.1531763.2297643.0910893.540199-.138675.6933752s-.540199.0910893-.6933752-.138675c-.1264561-.1896841-.3017882-.2773501-.5839749-.2773501s-.4575188.087666-.5839749.2773501c-.1531762.2297643-.4636109.2918512-.6933752.138675s-.2918513-.4636109-.138675-.6933752z"
        />
      </svg>
    </div>
    <div>
      <div>
        <h3
          className="size--16"
        >
          Thoughtful hosts
        </h3>
      </div>
      <div>
        <p
          className="size--14"
        >
          Get to know hosts who share their expertise and a window to their world.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms/Bullet Help 1`] = `
<div
  data-testid="help-bullet--atom"
>
  <div
    className="flex"
  >
    <div
      className="m-r--16"
    >
      <svg
        viewBox="0 0 32 32"
        width={28}
      >
        <path
          d="M16 1c5.046 0 9.298 3.397 10.594 8.03a6 6 0 0 1-.33 11.964 11.01 11.01 0 0 1-7.531 6.695l.2-.053a3.001 3.001 0 1 1-.264-2.008A9.003 9.003 0 0 0 25 17.031V12a9 9 0 0 0-17.996-.265L7 12v9H6a6 6 0 0 1-.594-11.971C6.702 4.397 10.954 1 16 1zm0 25a1 1 0 1 0 0 2 1 1 0 0 0 0-2zM5 11.126l-.155.043a4.002 4.002 0 0 0 0 7.662l.155.042v-7.747zm22 0v7.747l.155-.042a4.002 4.002 0 0 0 0-7.662L27 11.126z"
        />
      </svg>
    </div>
    <div>
      <div
        className="m-b--6"
      >
        <h3>
          24/7 customer support
        </h3>
      </div>
      <div>
        <h4
          className="size--16 lh--15"
        >
          From setting up your listing to concerns about guests, our global team is here to support you by phone, email, and chat, every step of the way.
        </h4>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms/Bullet Know 1`] = `
<div
  data-testid="know-bullet--atom"
>
  <div
    className="flex"
  >
    <div
      className="m-r--12"
    >
      <span
        width={14}
      >
        󰀥
      </span>
    </div>
    <div>
      <p
        className="weight--100 size--16"
      >
        Check-in: 3:00 p.m.–12:00 a.m.
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms/Bullet Online Host 1`] = `
<div
  data-testid="onlinehost-bullet--atom"
>
  <div>
    <div>
      <img
        alt="home"
        src="https://a0.muscache.com/pictures/b0fe7d1b-2c8b-48ba-9310-5cbeb3f25a32.jpg"
        style={
          Object {
            "width": 40,
          }
        }
      />
    </div>
    <div
      className="m-v--16"
    >
      <h3>
        Host from home
      </h3>
    </div>
    <div
      className="size--14"
    >
      <p>
        Share your expertise and a window to your world
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms/Bullet Priority 1`] = `
<div
  data-testid="priority-bullet--atom"
>
  <div>
    <div>
      <svg
        fill="rgb(227, 28, 95)"
        stroke="currentcolor"
        viewBox="0 0 48 48"
        width={40}
      >
        <g>
          <g
            stroke="none"
          >
            <path
              d="M28 5l.585.005c4.29.076 8.837.984 13.645 2.737l.77.288V35.4l-.008.13a1 1 0 0 1-.47.724l-.116.06L28 42.716l-2-.216V31.414L14.707 19.707 13 19V8.029l.77-.286c4.797-1.75 9.336-2.658 13.62-2.737L28 5z"
              fillOpacity={0.2}
            />
            <path
              d="M28 1c5.599 0 11.518 1.275 17.755 3.816a2 2 0 0 1 1.239 1.691L47 6.67V35.4a5 5 0 0 1-2.764 4.472l-.205.097L28 47h-3l-1.853-1H25a1 1 0 0 0 1-1h2l15.218-6.858a3 3 0 0 0 1.757-2.351l.019-.194.006-.196V6.669l-.692-.278C38.557 4.128 33.121 3 28 3S17.443 4.128 11.692 6.391L11 6.67 10.999 22 9 23.999V6.669a2 2 0 0 1 1.098-1.786l.147-.067C16.483 2.275 22.401 1 28 1z"
            />
          </g>
          <g
            fill="none"
            strokeWidth={2}
          >
            <path
              d="M2 31.414V45a1 1 0 0 0 1 1h22a1 1 0 0 0 1-1V31.414a1 1 0 0 0-.293-.707l-11-11a1 1 0 0 0-1.414 0l-11 11a1 1 0 0 0-.293.707z"
            />
            <path
              d="M10 46V35a1 1 0 0 1 1-1h6a1 1 0 0 1 1 1v11"
            />
          </g>
        </g>
      </svg>
    </div>
    <div
      className="m-v--16"
    >
      <h3
        className="size--24"
      >
        Host insurance and protection
      </h3>
    </div>
    <div
      className="m-b--32"
    >
      <p>
        To support you in the rare event of an incident, each booking on AIrbnb includes property damae protection of up to $1M USD and liability insurance of up to $1M USD.
      </p>
    </div>
    <div>
      <button
        className=" inline-block transition"
        data-testid="auth-button--atom"
        onClick={[Function]}
        style={
          Object {
            "cursor": "pointer",
          }
        }
      >
        <div
          className="relative all-center"
        >
          <div
            className="al--0"
          />
          <div>
            <h3
              className="size--14 c--gray__2"
            >
              Continue with 
              Email
            </h3>
          </div>
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms/Bullet Question 1`] = `
<div
  data-testid="question-bullet--atom"
>
  <div
    className="p-v--16 b-b--white__1"
  >
    <div>
      <h4
        className="size--17 c--darkgreen__3"
      >
        Question here
      </h4>
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms/Bullet Rating 1`] = `
<div
  data-testid="rating-bullet--atom"
>
  <div
    className="flex flex"
  >
    <div>
      <svg
        height={14}
        style={
          Object {
            "fill": "#E61E4D",
            "marginBottom": 1,
          }
        }
        viewBox="0 0 37.286 37.287"
      >
        <g>
          <path
            d="M36.683,16.339l-7.567,7.377l1.786,10.417c0.128,0.75-0.182,1.509-0.797,1.957c-0.348,0.253-0.762,0.382-1.176,0.382
c-0.318,0-0.638-0.076-0.931-0.23l-9.355-4.918l-9.355,4.918c-0.674,0.355-1.49,0.295-2.107-0.15
c-0.615-0.448-0.924-1.206-0.795-1.957l1.787-10.417L0.604,16.34c-0.547-0.531-0.741-1.326-0.508-2.05
c0.236-0.724,0.861-1.251,1.615-1.361l10.459-1.521l4.68-9.478c0.335-0.684,1.031-1.116,1.792-1.116
c0.763,0,1.456,0.432,1.793,1.115l4.68,9.478l10.461,1.521c0.752,0.109,1.379,0.637,1.611,1.361
C37.425,15.013,37.226,15.808,36.683,16.339z"
          />
        </g>
      </svg>
    </div>
    <h3
      className="p-l--4 c--g__2 size--14"
    >
      5
    </h3>
    <span
      className="p-l--4 c--gray__1 size--14 weight--100"
    >
      (
      100
      )
    </span>
  </div>
</div>
`;

exports[`Storyshots Atoms/Bullet Required 1`] = `
<div
  data-testid="required-bullet--atom"
>
  <div
    className="flex items-center"
  >
    <div
      className="m-r--4"
    >
      <svg
        stroke="#C54A32"
        strokeWidth={2}
        viewBox="0 0 32 32"
        width={16}
      >
        <circle
          cx="16"
          cy="16"
          fill="none"
          r="14"
        />
        <path
          d="m16 8v10"
          fill="none"
        />
        <circle
          cx="16"
          cy="22.5"
          fill="#000"
          r=".5"
        />
      </svg>
    </div>
    <div>
      <p
        className="size--12 c--warning"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms/Bullet Review 1`] = `
<div
  style={
    Object {
      "width": 300,
    }
  }
>
  <div
    data-testid="score-bullet--atom"
  >
    <div
      className="p-v--2 flex items-center justify-between w--50p"
    >
      <p
        className="weight--300"
      >
        Aspect
      </p>
      <div
        className="flex items-center w-full"
      >
        <div>
          <div
            className="bg--white__3 relative h__4"
          >
            <span
              className="absolute t--0 l--0 b--0 bg--black w--50p"
            />
          </div>
        </div>
        <p
          className="p-r--16 size--12"
        >
          5
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms/Bullet Score 1`] = `
<div
  data-testid="score-bullet--atom"
>
  <div
    className="p-v--2 flex items-center justify-between w--50p"
  >
    <p
      className="weight--300"
    >
      Aspect
    </p>
    <div
      className="flex items-center w-full"
    >
      <div>
        <div
          className="bg--white__3 relative h__4"
        >
          <span
            className="absolute t--0 l--0 b--0 bg--black w--50p"
          />
        </div>
      </div>
      <p
        className="p-r--16 size--12"
      >
        5
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms/Button Auth 1`] = `
<div
  style={
    Object {
      "width": 300,
    }
  }
>
  <button
    className="hover__auth bg--transparent block w--full p-h--12 p-v--12 br--8 inline-block transition"
    data-testid="auth-button--atom"
    style={
      Object {
        "cursor": "pointer",
      }
    }
  >
    <div
      className="relative all-center"
    >
      <div
        className="al--0"
      />
      <div>
        <h3
          className="size--14 c--gray__2"
        >
          Continue with 
          Email
        </h3>
      </div>
    </div>
  </button>
</div>
`;

exports[`Storyshots Atoms/Button Back 1`] = `
<button
  className=" inline-block transition"
  data-testid="back-button--atom"
  style={
    Object {
      "cursor": "pointer",
    }
  }
>
  <div
    className="flex items-center bg--transparent"
  >
    <div>
      <svg
        viewBox="0 0 32 32"
        width={20}
      >
        <g
          fill="none"
        >
          <path
            d="m20 28-11.29289322-11.2928932c-.39052429-.3905243-.39052429-1.0236893 0-1.4142136l11.29289322-11.2928932"
            stroke="#61AFB2"
            strokeWidth={3}
          />
        </g>
      </svg>
    </div>
    <div>
      <h4
        className="size--15 c--darkgreen__3"
      >
        Back
      </h4>
    </div>
  </div>
</button>
`;

exports[`Storyshots Atoms/Button Banner 1`] = `
<div
  style={
    Object {
      "width": 200,
    }
  }
>
  <button
    className="bg--white br--6 inline-block transition"
    data-testid="banner-button--atom"
    style={
      Object {
        "cursor": "pointer",
      }
    }
  >
    <div
      className="bg--white p-h--16 p-v--8 br--6 size--14"
    >
      <h3>
        Button
      </h3>
    </div>
  </button>
</div>
`;

exports[`Storyshots Atoms/Button Border 1`] = `
<button
  className="bg--transparent inline-block transition"
  data-testid="border-button--atom"
  style={
    Object {
      "cursor": "pointer",
    }
  }
>
  <div
    className="text--center br--6 no-wrap size--16 p-t--10 p-b--10 p-l--18 p-r--18 b-2--black"
  >
    <h4>
      Button
    </h4>
  </div>
</button>
`;

exports[`Storyshots Atoms/Button Expand 1`] = `
<button
  className=" inline-block transition"
  data-testid="expand-button--atom"
  style={
    Object {
      "cursor": "pointer",
    }
  }
>
  <div>
    <div
      className="flex items-center"
    >
      <div>
        <u
          className="size--15 weight--500"
        >
          Button
        </u>
      </div>
      <div>
        <svg
          stroke="black"
          strokeWidth={5}
          viewBox="0 0 32 32"
          width={14}
        >
          <g
            fill="none"
          >
            <path
              d="m12 4 11.2928932 11.2928932c.3905243.3905243.3905243 1.0236893 0 1.4142136l-11.2928932 11.2928932"
            />
          </g>
        </svg>
      </div>
    </div>
  </div>
</button>
`;

exports[`Storyshots Atoms/Button Filter 1`] = `
<button
  className=" inline-block transition"
  data-testid="filter-button--atom"
  style={
    Object {
      "cursor": "pointer",
    }
  }
>
  <div
    className="hover__filter p-v--8 p-h--14 br--20 bg--transparent"
  >
    <p
      className="size--15"
    >
      Cancellation flexibility
    </p>
  </div>
</button>
`;

exports[`Storyshots Atoms/Button Globe 1`] = `
<button
  className="text--left inline-block transition"
  data-testid="globe-button--atom"
  style={
    Object {
      "cursor": "pointer",
    }
  }
>
  <div
    className="p--12 br--8 hover-background--white__1 false"
  >
    <div>
      <p
        className="size--14 c--black"
      >
        Language
      </p>
    </div>
    <div>
      <p
        className="size--14 c--gray__1"
      >
        Region
      </p>
    </div>
  </div>
</button>
`;

exports[`Storyshots Atoms/Button Link 1`] = `
<button
  className=" inline-block transition"
  data-testid="link-button--atom"
  style={
    Object {
      "cursor": "pointer",
    }
  }
>
  <div>
    <h4
      className="size--14"
    />
  </div>
</button>
`;

exports[`Storyshots Atoms/Button Location 1`] = `
<button
  className=" inline-block transition"
  data-testid="location-button--atom"
  style={
    Object {
      "cursor": "pointer",
    }
  }
>
  <div
    className="flex items-center p-v--8"
  >
    <div
      className="m-r--16"
    >
      <div
        style={
          Object {
            "height": 40,
            "width": 40,
          }
        }
      >
        <img
          src="https://a0.muscache.com/im/pictures/fc42dde0-36a7-460e-af89-10b5e44e48d8.jpg?im_w=240&im_q=lowq"
          style={
            Object {
              "borderRadius": 5,
              "verticalAlign": "bottom",
            }
          }
        />
      </div>
    </div>
    <div>
      <div>
        <h4
          className="text--left size--15"
        >
          Explore nearby destinations
        </h4>
      </div>
    </div>
  </div>
</button>
`;

exports[`Storyshots Atoms/Button Menu 1`] = `
<button
  className="hover-shadow--lg br--30 inline-block transition"
  data-testid="menu-button--atom"
  style={
    Object {
      "cursor": "pointer",
    }
  }
>
  <div
    className="b-2--white__2 flex items-center p-v--4 p-l--10 p-r--6 bg--white br--30"
  >
    <div
      className="m-r--10"
    >
      <svg
        fill="black"
        viewBox="0 0 448 512"
        width={12}
      >
        <path
          d="M16 132h416c8.837 0 16-7.163 16-16V76c0-8.837-7.163-16-16-16H16C7.163 60 0 67.163 0 76v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16z"
        />
      </svg>
    </div>
    <div>
      <svg
        fill="gray"
        viewBox="0 0 32 32"
        width={30}
      >
        <path
          d="m16 .7c-8.437 0-15.3 6.863-15.3 15.3s6.863 15.3 15.3 15.3 15.3-6.863 15.3-15.3-6.863-15.3-15.3-15.3zm0 28c-4.021 0-7.605-1.884-9.933-4.81a12.425 12.425 0 0 1 6.451-4.4 6.507 6.507 0 0 1 -3.018-5.49c0-3.584 2.916-6.5 6.5-6.5s6.5 2.916 6.5 6.5a6.513 6.513 0 0 1 -3.019 5.491 12.42 12.42 0 0 1 6.452 4.4c-2.328 2.925-5.912 4.809-9.933 4.809z"
        />
      </svg>
    </div>
  </div>
</button>
`;

exports[`Storyshots Atoms/Button Modal 1`] = `
<button
  className=" inline-block transition"
  data-testid="modal-button--atom"
  style={
    Object {
      "cursor": "pointer",
    }
  }
>
  <div
    className="bg--transparent p--8 br--circle hover__close"
  >
    <svg
      height={16}
      stroke="black"
      strokeWidth={2}
      viewBox="0 0 32 32"
      width={16}
    >
      <path
        d="m6 6 20 20"
      />
      <path
        d="m26 6-20 20"
      />
    </svg>
  </div>
</button>
`;

exports[`Storyshots Atoms/Button Nearby 1`] = `
<button
  className=" inline-block transition"
  data-testid="nearby-button--atom"
  style={
    Object {
      "cursor": "pointer",
    }
  }
>
  <div
    className="p--3 hover-border--gray__4 b--transparent br--10"
  >
    <div
      className="b--white__3 p-h--15 p-v--10 br--10"
    >
      <h4
        className="size--12"
      >
        Nearby
      </h4>
    </div>
  </div>
</button>
`;

exports[`Storyshots Atoms/Button Option 1`] = `
<button
  className="w--full inline-block transition"
  data-testid="option-button--atom"
  style={
    Object {
      "cursor": "pointer",
    }
  }
>
  <div
    className="text--left size--13 bg--white p-h--14 p-v--10 block hover-background--white__1 weight--300"
  >
    Option
  </div>
</button>
`;

exports[`Storyshots Atoms/Button Paginate 1`] = `
<button
  className=" inline-block transition"
  data-testid="paginate-button--atom"
  style={
    Object {
      "cursor": "pointer",
    }
  }
>
  <div
    className="bg__paginate p--8 b--white__2 br--circle"
  >
    <svg
      viewBox="0 0 32 32"
      width={10}
    >
      <g
        fill="none"
      >
        <path
          d="m20 28-11.29289322-11.2928932c-.39052429-.3905243-.39052429-1.0236893 0-1.4142136l11.29289322-11.2928932"
          stroke="black"
          strokeWidth={5}
        />
      </g>
    </svg>
  </div>
</button>
`;

exports[`Storyshots Atoms/Button Primary 1`] = `
<div
  style={
    Object {
      "width": 300,
    }
  }
>
  <button
    className=" inline-block transition"
    data-testid="primary-button--atom"
    style={
      Object {
        "cursor": "pointer",
      }
    }
  >
    <div
      className="c--white w--full br--8 size--16 p-v--14 p-h--20 bg--primary"
      style={
        Object {
          "backgroundColor": undefined,
        }
      }
    >
      <h4
        className="c--white"
      >
        Button
      </h4>
    </div>
  </button>
</div>
`;

exports[`Storyshots Atoms/Button Privacy 1`] = `
<div
  style={
    Object {
      "width": 300,
    }
  }
>
  <button
    className=" inline-block transition"
    data-testid="privacy-button--atom"
    style={
      Object {
        "cursor": "pointer",
      }
    }
  >
    <div
      className="b_to_f--sm no-wrap p-v--13 p-h--18 weight--500 br--8 w--full min-w--150 size--15 justify-center bg--transparent b--black"
    >
      <h4
        className="c--black"
      >
        Button
      </h4>
    </div>
  </button>
</div>
`;

exports[`Storyshots Atoms/Button Search 1`] = `
<button
  className=" inline-block transition"
  data-testid="search-button--atom"
  style={
    Object {
      "cursor": "pointer",
    }
  }
>
  <div
    className="flex items-center bg--primary"
    style={
      Object {
        "borderRadius": 50,
        "height": 40,
        "transition": "0.25s all ease",
        "transitionDelay": "0.25s",
        "width": 40,
      }
    }
  >
    <div
      className="p-l--14 m-r--4"
    >
      <svg
        height={13}
        viewBox="0 0 32 32"
        width={13}
      >
        <g
          fill="none"
        >
          <path
            d="m13 24c6.0751322 0 11-4.9248678 11-11 0-6.07513225-4.9248678-11-11-11-6.07513225 0-11 4.92486775-11 11 0 6.0751322 4.92486775 11 11 11zm8-3 9 9"
            stroke="white"
            strokeWidth={4}
          />
        </g>
      </svg>
    </div>
    <div
      style={
        Object {
          "opacity": 0,
          "transition": "0.25s all ease",
          "transitionDelay": "0s",
          "visibility": "hidden",
        }
      }
    >
      <p
        className="size--15 c--white"
      >
        Search
      </p>
    </div>
  </div>
</button>
`;

exports[`Storyshots Atoms/Button Searchbar 1`] = `
<button
  className=" inline-block transition"
  data-testid="searchbar-button--atom"
  style={
    Object {
      "cursor": "pointer",
    }
  }
>
  <button
    className="w--full br--25 bg--white b--white__2 hover-shadow--sm shadow--sm"
    data-testid="button"
    onClick={[Function]}
    style={Object {}}
  >
    <div
      className="p-v--12 p-l--18 p-r--8 all-center"
    >
      <div
        className="m-r--12"
      >
        <svg
          viewBox="0 0 32 32"
          width={15}
        >
          <g
            fill="none"
          >
            <path
              d="m13 24c6.0751322 0 11-4.9248678 11-11 0-6.07513225-4.9248678-11-11-11-6.07513225 0-11 4.92486775-11 11 0 6.0751322 4.92486775 11 11 11zm8-3 9 9"
              stroke="black"
              strokeWidth={4}
            />
          </g>
        </svg>
      </div>
      <div
        className="weight--100 size--15 c--gray__0"
      >
        Search stays
      </div>
    </div>
  </button>
</button>
`;

exports[`Storyshots Atoms/Button Transparent 1`] = `
<button
  className=" inline-block transition"
  data-testid="transparent-button--atom"
  style={
    Object {
      "cursor": "pointer",
    }
  }
>
  <div
    className="br--30 flex items-center bg--transparent p-v--10 p-h--12 hover-background--white__1"
  >
    <h3
      className="size--15"
    >
      Button
    </h3>
  </div>
</button>
`;

exports[`Storyshots Atoms/Button Underline 1`] = `
<button
  className=" inline-block transition"
  data-testid="underline-button--atom"
  style={
    Object {
      "cursor": "pointer",
    }
  }
>
  <div
    className="inline-block bg--transparent"
  >
    <h4
      className={false}
      style={
        Object {
          "fontSize": 14,
        }
      }
    >
      <u>
        Title here
      </u>
    </h4>
  </div>
</button>
`;

exports[`Storyshots Molecules/Card Again 1`] = `
<div
  data-testid="again-card"
>
  <div
    className="br--15 b--white__2"
  >
    <div
      className="p--18"
    >
      <div
        className="flex"
      >
        <div
          className="m-r--12"
        >
          <div
            className="p--12 br--circle bg--red__2"
          >
            <svg
              fill="white"
              viewBox="0 0 16 16"
              width={18}
            >
              <path
                d="m8 12c1.1045695 0 2 .8954305 2 2s-.8954305 2-2 2-2-.8954305-2-2 .8954305-2 2-2zm1.6-12v9.6h-3.2v-9.6z"
              />
            </svg>
          </div>
        </div>
        <div>
          <div
            className="m-b--4"
          >
            <h3
              className="size--16"
            >
              Let's try that again
            </h3>
          </div>
          <div>
            <p
              className="size--14 c--gray__1"
            >
              There isn’t an account associated with this email address. Please try another email.
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules/Card Arrangements 1`] = `
<div
  data-testid="arrangements-card"
>
  <div
    className="w--48 p-v--25 b--white__2 br--15 w--200"
  >
    <div
      className="p-l--14"
    >
      <div
        className="p-t--4 p-b--8"
      >
        <svg
          viewBox="0 0 480 480"
          width={24}
        >
          <g>
            <g>
              <path
                d="M472,272h-8v-24c-0.021-15.886-9.44-30.254-24-36.608V88c-0.002-3.18-1.886-6.056-4.8-7.328
c3.121-5.002,4.783-10.776,4.8-16.672c0-17.673-14.327-32-32-32c-17.673,0-32,14.327-32,32c0.033,5.634,1.569,11.157,4.448,16
H99.552c2.879-4.843,4.415-10.366,4.448-16c0-17.673-14.327-32-32-32S40,46.327,40,64c0.017,5.896,1.679,11.67,4.8,16.672
C41.886,81.944,40.002,84.82,40,88v123.392C25.44,217.746,16.021,232.114,16,248v24H8c-4.418,0-8,3.582-8,8v112
c0,4.418,3.582,8,8,8h8v40c0,4.418,3.582,8,8,8h32c4.418,0,8-3.582,8-8v-40h352v40c0,4.418,3.582,8,8,8h32c4.418,0,8-3.582,8-8
v-40h8c4.418,0,8-3.582,8-8V280C480,275.582,476.418,272,472,272z M408,48c8.837,0,16,7.163,16,16s-7.163,16-16,16
s-16-7.163-16-16S399.163,48,408,48z M72,48c8.837,0,16,7.163,16,16s-7.163,16-16,16s-16-7.163-16-16S63.163,48,72,48z M56,96h368
v112h-32.208c5.294-6.883,8.179-15.316,8.208-24v-16c-0.026-22.08-17.92-39.974-40-40h-64c-22.08,0.026-39.974,17.92-40,40v16
c0.029,8.684,2.914,17.117,8.208,24h-48.416c5.294-6.883,8.179-15.316,8.208-24v-16c-0.026-22.08-17.92-39.974-40-40h-64
c-22.08,0.026-39.974,17.92-40,40v16c0.029,8.684,2.914,17.117,8.208,24H56V96z M384,168v16c0,13.255-10.745,24-24,24h-64
c-13.255,0-24-10.745-24-24v-16c0-13.255,10.745-24,24-24h64C373.255,144,384,154.745,384,168z M208,168v16
c0,13.255-10.745,24-24,24h-64c-13.255,0-24-10.745-24-24v-16c0-13.255,10.745-24,24-24h64C197.255,144,208,154.745,208,168z M32,248c0-13.255,10.745-24,24-24h368c13.255,0,24,10.745,24,24v24H32V248z M48,432H32v-32h16V432z M448,432h-16v-32h16V432z M464,384H16v-96h448V384z"
              />
            </g>
          </g>
          <g>
            <g>
              <path
                d="M72,352H40c-4.418,0-8,3.582-8,8s3.582,8,8,8h32c4.418,0,8-3.582,8-8S76.418,352,72,352z"
              />
            </g>
          </g>
          <g>
            <g>
              <path
                d="M440,352H104c-4.418,0-8,3.582-8,8s3.582,8,8,8h336c4.418,0,8-3.582,8-8S444.418,352,440,352z"
              />
            </g>
          </g>
        </svg>
      </div>
      <p
        className="p-t--4 c--gray__2"
      >
        Bedroom
      </p>
      <div>
        <p
          className="c--gray__2"
        >
          1
           
          double bed
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules/Card Available 1`] = `
<div
  data-testid="available-card"
>
  <div
    className="p--24 b--white__2 br--6"
  >
    <div
      className="m-b--6"
    >
      <h3
        className="size--15"
      >
        Tue., Nov. 10
      </h3>
    </div>
    <div>
      <p
        className="size--14"
      >
        1:00 a.m. 
         - 
        3:00 a.m. 
         
        PST
      </p>
    </div>
    <div
      className="m-v--8"
    >
      <u
        className="size--14"
      >
        Book for a private group
      </u>
    </div>
    <div
      className="m-v--16"
    >
      <span
        className="size--15"
      >
        <b>
          $
          31
        </b>
      </span>
      <span
        className="size--15"
      >
         /person
      </span>
    </div>
    <div
      className="inline-block"
    >
      <button
        className=" inline-block transition"
        data-testid="primary-button--atom"
        style={
          Object {
            "cursor": "pointer",
          }
        }
      >
        <div
          className="c--white w--full br--8 size--14 p-v--8 p-h--14 bg--primary"
          style={
            Object {
              "backgroundColor": undefined,
            }
          }
        >
          <h4
            className="c--white"
          >
            Choose
          </h4>
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules/Card Category 1`] = `
<div
  style={
    Object {
      "width": 300,
    }
  }
>
  <div
    data-testid="category-card"
  >
    <div
      className="category-section__card"
    >
      <div
        className="category-section__card--img"
      >
        <img
          alt="unique stays"
          src="https://a0.muscache.com/im/pictures/2a16f833-464c-446c-8d74-33eb8c643975.jpg?im_w=1200"
        />
      </div>
      <div>
        <h3
          className="weight--500 size--17 c--gray__4"
        >
          Title should be here
        </h3>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules/Card Checkin 1`] = `
<div
  style={
    Object {
      "width": 500,
    }
  }
>
  <div
    data-testid="checkin-card"
  >
    <div
      className="display__checkin--wrapper position__checkin--wrapper shadow--lg b--white__2 w__checkin--wrapper p-v--22"
      style={
        Object {
          "backgroundColor": "white",
          "borderRadius": 10,
          "zIndex": 50,
        }
      }
    >
      <div
        className="p-h--24"
      >
        <div
          className="flex justify-between"
        >
          <h3
            className="p-v--10 c--gray__2 size--21 weight--500"
          >
            Add dates for prices
          </h3>
          <div
            className="p-v--10 c--gray__2 size--21 weight--500"
            style={
              Object {
                "width": 100,
              }
            }
          >
            <div
              className="inline-block m-r--4"
            >
              <svg
                style={
                  Object {
                    "fill": "#E61E4D",
                    "marginBottom": 1,
                  }
                }
                viewBox="0 0 37.286 37.287"
                width={10}
              >
                <g>
                  <path
                    d="M36.683,16.339l-7.567,7.377l1.786,10.417c0.128,0.75-0.182,1.509-0.797,1.957c-0.348,0.253-0.762,0.382-1.176,0.382
c-0.318,0-0.638-0.076-0.931-0.23l-9.355-4.918l-9.355,4.918c-0.674,0.355-1.49,0.295-2.107-0.15
c-0.615-0.448-0.924-1.206-0.795-1.957l1.787-10.417L0.604,16.34c-0.547-0.531-0.741-1.326-0.508-2.05
c0.236-0.724,0.861-1.251,1.615-1.361l10.459-1.521l4.68-9.478c0.335-0.684,1.031-1.116,1.792-1.116
c0.763,0,1.456,0.432,1.793,1.115l4.68,9.478l10.461,1.521c0.752,0.109,1.379,0.637,1.611,1.361
C37.425,15.013,37.226,15.808,36.683,16.339z"
                  />
                </g>
              </svg>
            </div>
            <span
              className="inline-block size--14 m-r--4"
            >
              4.93
            </span>
            <span
              className="inline-block size--14 weight-100 c--white__3"
            >
              (248)
            </span>
          </div>
        </div>
        <div
          className="br--8 m-t--12 b--white__2"
        >
          <div
            className="flex w--full"
            style={
              Object {
                "height": 60,
              }
            }
          >
            <div
              className="w--50p btlr--6 b-l--white__3 b-r--white__3 b-b--white__3 b-t--white__3 p-v--10"
              onClick={[Function]}
            >
              <div
                className="p-h--12"
              >
                <label
                  className="block text--left size--10 weight--700 c--gray__3"
                >
                  CHECK-IN
                </label>
                <input
                  className="w--full weight--300 size--14 b--0 outline--none"
                  placeholder="Add date"
                />
              </div>
            </div>
            <div
              className="w--50p btrr--6 b-r--white__3 b-b--white__3 b-t--white__3 p-v--10"
              onClick={[Function]}
            >
              <div
                className="p-h--12"
              >
                <label
                  className="block text--left size--10 weight--700 c--gray__3"
                >
                  CHECK-OUT
                </label>
                <input
                  className="w--full weight--300 size--14 b--0 outline--none"
                  placeholder="Add date"
                />
              </div>
            </div>
          </div>
          <button
            className="b-t--transparent b-b--white__3 b-l--white__3 b-r--white__3 bg--transparent bbr--6 w--full"
            onClick={[Function]}
            style={
              Object {
                "height": 60,
              }
            }
          >
            <div
              className="h--full b-t--transparent b-b--transparent b-l--transparent b-r--transparent p-v--12 w--full bbr--6 bg--transparent"
            >
              <div
                className="p-h--12 flex justify-between items-center"
              >
                <div>
                  <label
                    className="block text--left size--10 weight--700 c--gray__3"
                  >
                    GUESTS
                  </label>
                  <p
                    className="weight--300 size--14"
                  >
                    1 guest
                  </p>
                </div>
                <div>
                  <svg
                    viewBox="0 0 256 256"
                    width={14}
                  >
                    <g>
                      <g>
                        <polygon
                          points="225.813,48.907 128,146.72 30.187,48.907 0,79.093 128,207.093 256,79.093 		"
                        />
                      </g>
                    </g>
                  </svg>
                </div>
              </div>
            </div>
          </button>
        </div>
        <div
          className="m-t--24"
        >
          <button
            className="w--full p-v--14 size--15 br--5 bg--primary c--white weight--300"
          >
            Check availability
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules/Card Horizontal 1`] = `
<div
  style={
    Object {
      "maxWidth": 600,
    }
  }
>
  <div
    data-testid="horizontal-card"
  >
    <div>
      <div
        style={
          Object {
            "paddingTop": "66.6%",
            "position": "relative",
          }
        }
      >
        <div
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <div
            style={
              Object {
                "height": "100%",
              }
            }
          >
            <div
              className="relative h--full"
            >
              <div
                className="br--12 h--full"
              >
                <div
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  style={
                    Object {
                      "borderRadius": 12,
                      "height": "100%",
                      "overflow": "hidden",
                      "position": "relative",
                      "width": "100%",
                      "zIndex": 50,
                    }
                  }
                >
                  <div
                    style={
                      Object {
                        "borderRadius": 12,
                        "display": "flex",
                        "height": "100%",
                        "transform": "translateX(-0px)",
                        "transition": "transform ease-out 0.45s",
                        "width": 3000,
                      }
                    }
                  >
                    <div
                      style={
                        Object {
                          "backgroundImage": "url(https://a0.muscache.com/im/pictures/7e0063fa-d325-49ae-a6f6-285fe9928da4.jpg?im_w=720)",
                          "backgroundPosition": "center",
                          "backgroundRepeat": "no-repeat",
                          "backgroundSize": "cover",
                          "height": "100%",
                          "width": "100%",
                        }
                      }
                    />
                    <div
                      style={
                        Object {
                          "backgroundImage": "url(https://a0.muscache.com/im/pictures/682aa552-1a91-4736-86a2-3d12cb316d07.jpg?im_w=720)",
                          "backgroundPosition": "center",
                          "backgroundRepeat": "no-repeat",
                          "backgroundSize": "cover",
                          "height": "100%",
                          "width": "100%",
                        }
                      }
                    />
                    <div
                      style={
                        Object {
                          "backgroundImage": "url(https://a0.muscache.com/im/pictures/924798e4-2fe1-47de-9636-947332829bcc.jpg?im_w=720)",
                          "backgroundPosition": "center",
                          "backgroundRepeat": "no-repeat",
                          "backgroundSize": "cover",
                          "height": "100%",
                          "width": "100%",
                        }
                      }
                    />
                  </div>
                  <div
                    style={
                      Object {
                        "left": 10,
                        "opacity": 0,
                        "position": "absolute",
                        "top": "50%",
                        "transform": "translateY(-50%)",
                        "transition": "opacity 0.2s ease-out",
                        "zIndex": 60,
                      }
                    }
                  >
                    <button
                      className=" inline-block transition"
                      data-testid="paginate-button--atom"
                      onClick={[Function]}
                      style={
                        Object {
                          "cursor": "pointer",
                        }
                      }
                    >
                      <div
                        className="bg__paginate p--8 b--white__2 br--circle"
                      >
                        <svg
                          viewBox="0 0 32 32"
                          width={10}
                        >
                          <g
                            fill="none"
                          >
                            <path
                              d="m20 28-11.29289322-11.2928932c-.39052429-.3905243-.39052429-1.0236893 0-1.4142136l11.29289322-11.2928932"
                              stroke="black"
                              strokeWidth={5}
                            />
                          </g>
                        </svg>
                      </div>
                    </button>
                  </div>
                  <div
                    style={
                      Object {
                        "opacity": 0,
                        "position": "absolute",
                        "right": 10,
                        "top": "50%",
                        "transform": "translateY(-50%)",
                        "transition": "opacity 0.2s ease-out",
                        "zIndex": 60,
                      }
                    }
                  >
                    <button
                      className=" inline-block transition"
                      data-testid="paginate-button--atom"
                      onClick={[Function]}
                      style={
                        Object {
                          "cursor": "pointer",
                        }
                      }
                    >
                      <div
                        className="bg__paginate p--8 b--white__2 br--circle"
                      >
                        <svg
                          stroke="black"
                          strokeWidth={5}
                          viewBox="0 0 32 32"
                          width={10}
                        >
                          <g
                            fill="none"
                          >
                            <path
                              d="m12 4 11.2928932 11.2928932c.3905243.3905243.3905243 1.0236893 0 1.4142136l-11.2928932 11.2928932"
                            />
                          </g>
                        </svg>
                      </div>
                    </button>
                  </div>
                  <div
                    className="dots"
                    style={
                      Object {
                        "opacity": 0,
                        "transition": "opacity 0.2s ease-out",
                      }
                    }
                  >
                    <div
                      style={
                        Object {
                          "alignItems": "center",
                          "bottom": 25,
                          "display": "flex",
                          "justifyContent": "center",
                          "position": "absolute",
                          "width": "100%",
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "background": "white",
                            "borderRadius": "50%",
                            "cursor": "pointer",
                            "marginRight": 5,
                            "padding": 3,
                            "transition": "all 0.2s ease-in",
                          }
                        }
                      />
                      <span
                        style={
                          Object {
                            "background": "lightgray",
                            "borderRadius": "50%",
                            "cursor": "pointer",
                            "marginRight": 5,
                            "padding": 3,
                            "transition": "all 0.2s ease-in",
                          }
                        }
                      />
                      <span
                        style={
                          Object {
                            "background": "lightgray",
                            "borderRadius": "50%",
                            "cursor": "pointer",
                            "marginRight": 5,
                            "padding": 3,
                            "transition": "all 0.2s ease-in",
                          }
                        }
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="p-v--8 p-h--10 at--0 justify-between w--full"
              >
                <div
                  className="c--white hidden"
                  style={
                    Object {
                      "zIndex": 50,
                    }
                  }
                >
                  <div
                    className="p-h--8 p-v--4 bg--white__1 shadow--lg br--3"
                  >
                    <h3
                      className="size--12 uppercase ls--3"
                    >
                      Superhost
                    </h3>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        style={
          Object {
            "display": "flex",
            "marginTop": 6,
          }
        }
      >
        <div
          className="m-r--3"
        >
          <svg
            fill="#F5385D"
            viewBox="0 0 1000 1000"
            width={14}
          >
            <path
              d="M972 380c9 28 2 50-20 67L725 619l87 280c11 39-18 75-54 75-12 0-23-4-33-12L499 790 273 962a58 58 0 0 1-78-12 50 50 0 0 1-8-51l86-278L46 447c-21-17-28-39-19-67 8-24 29-40 52-40h280l87-279c7-23 28-39 52-39 25 0 47 17 54 41l87 277h280c24 0 45 16 53 40z"
            />
          </svg>
        </div>
        <div
          className="m-r--3"
        >
          <p
            className="weight--100 size--13"
          >
            5.00
          </p>
        </div>
        <div>
          <p
            className="weight--100 size--13 c--gray__0"
          >
            (100)
          </p>
        </div>
      </div>
      <div
        className="flex items-center"
      >
        <div>
          <p
            className="ls--4 weight--100 size--15 c--gray__4"
            style={
              Object {
                "textTransform": "capitalize",
              }
            }
          >
            Type of Stay
          </p>
        </div>
        <div>
          <p>
              ·   
          </p>
        </div>
        <div>
          <p
            className="ls--4 weight--100 size--15 c--gray__4"
          >
            Location
          </p>
        </div>
      </div>
      <div>
        <p
          className="ls--4 weight--100 size--15 c--gray__4"
          style={
            Object {
              "maxHeight": 250,
              "overflow": "hidden",
              "textOverflow": "ellipsis",
              "whiteSpace": "nowrap",
            }
          }
        >
          Title should be here
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules/Card Host 1`] = `
<div
  style={
    Object {
      "width": 400,
    }
  }
>
  <div
    data-testid="host-card"
  >
    <div>
      <div>
        <img
          src="https://a0.muscache.com/im/pictures/92acd468-73bf-4ca1-a956-277c4a94b3a3.jpg?im_q=highq&im_w=960"
          style={
            Object {
              "borderRadius": 12,
              "height": 434,
              "objectFit": "cover",
              "width": 350,
            }
          }
        />
      </div>
      <div
        style={
          Object {
            "marginTop": 6,
          }
        }
      >
        <h3>
          Darrel
        </h3>
      </div>
      <div
        className="m-v--8"
      >
        <h4
          className="ls--4 size--15 c--gray__4"
          style={
            Object {
              "textTransform": "capitalize",
            }
          }
        >
          Hosts a 
          tiny house
           in 
          Atlanta
        </h4>
      </div>
      <div>
        <button
          className=" inline-block transition"
          data-testid="underline-button--atom"
          onClick={[Function]}
          style={
            Object {
              "cursor": "pointer",
            }
          }
        >
          <div
            className="inline-block bg--transparent"
          >
            <h4
              className={false}
              style={
                Object {
                  "fontSize": 14,
                }
              }
            >
              <u>
                Check out some tiny houses
              </u>
            </h4>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules/Card How 1`] = `
<div
  style={
    Object {
      "width": 300,
    }
  }
>
  <div
    data-testid="how-card"
  >
    <div
      className="min-h--300 h--full p--22 b--white__2 br--6"
      style={
        Object {
          "minHeight": 350,
        }
      }
    >
      <div
        style={
          Object {
            "display": "flex",
            "justifyContent": "center",
            "padding": "10px auto 20px",
          }
        }
      >
        <div
          style={
            Object {
              "backgroundImage": "url(https://a0.muscache.com/airbnb/static/list_your_space/scenarios-meet-guest-eaa389217c2acc8887e3f88cc197f9fe.png)",
              "backgroundPosition": "center",
              "backgroundRepeat": "no-repeat",
              "backgroundSize": "cover",
              "height": 100,
              "width": 120,
            }
          }
        />
      </div>
      <div
        className="m-v--12"
      >
        <h3
          className="size--16"
        >
          Qualified guests find your listing
        </h3>
      </div>
      <div
        className="m-b--12"
      >
        <p
          className="size--14"
        >
          Anyone who wants to book with you needs to confirm their contact information, provide payment details, and tell you about their trip.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules/Card Nearby 1`] = `
<div
  data-testid="nearby-card"
>
  <div
    className="flex items-center"
  >
    <div
      className="w__nearby--sm m-r--12"
    >
      <img
        src="https://a0.muscache.com/im/pictures/0445ba36-5684-4cca-9cb1-418a0ffdcd2f.jpg?im_q=medq&im_w=1200"
        style={
          Object {
            "borderRadius": 10,
          }
        }
      />
    </div>
    <div>
      <h3
        className="size--15 m-b--4"
      >
        City
      </h3>
      <p
        className="size--15"
      >
        1
         hour drive
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules/Card Online 1`] = `
<div
  style={
    Object {
      "maxWidth": 600,
    }
  }
>
  <div
    data-testid="online-card"
  >
    <div
      style={
        Object {
          "height": "100%",
          "position": "relative",
          "width": "100%",
        }
      }
    >
      <div
        style={
          Object {
            "display": "inline-block",
            "height": "100%",
            "minHeight": 1,
            "verticalAlign": "bottom",
            "width": "100%",
          }
        }
      >
        <picture>
          <source
            media="(min-width: 743.1px) and (max-width: 1127px)"
            srcSet="https://a0.muscache.com/im/pictures/78010337-07f0-4154-9528-363b97b54699.jpg?im_w=480 1x, https://a0.muscache.com/im/pictures/78010337-07f0-4154-9528-363b97b54699.jpg?im_w=960 2x"
          />
          <source
            media="(min-width: 1127.1px) and (max-width: 1439px)"
            srcSet="https://a0.muscache.com/im/pictures/78010337-07f0-4154-9528-363b97b54699.jpg?im_w=480 1x, https://a0.muscache.com/im/pictures/78010337-07f0-4154-9528-363b97b54699.jpg?im_w=1200 2x"
          />
          <source
            media="(min-width: 1439.1px)"
            srcSet="https://a0.muscache.com/im/pictures/78010337-07f0-4154-9528-363b97b54699.jpg?im_w=720 1x, https://a0.muscache.com/im/pictures/78010337-07f0-4154-9528-363b97b54699.jpg?im_w=1680 2x"
          />
          <img
            aria-hidden="true"
            className="br--20"
            decoding="async"
            src="https://a0.muscache.com/im/pictures/0e46f398-42f5-4897-9168-f84622aeba58.jpg?im_w=720"
            style={
              Object {
                "objectFit": "cover",
                "verticalAlign": "bottom",
              }
            }
          />
        </picture>
      </div>
      <div
        className="bg--white bbr--15 shadow--lg"
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
          }
        }
      >
        <div
          style={
            Object {
              "borderBottomLeftRadius": 15,
              "borderBottomRightRadius": 15,
              "minHeight": 75,
              "padding": "15px 15px 0 15px",
              "width": "100%",
            }
          }
        >
          <h4
            className="weight--500 size--15"
          >
            Learn to make soup dumplings in Shanghai
          </h4>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules/Card Participate 1`] = `
<div
  data-testid="participate-card"
>
  <div
    className="min-h--300 w--210 h--full p--16 b--white__2 br--6"
  >
    <div
      className="m-v--12"
    >
      <svg
        viewBox="0 0 32 32"
        width={32}
      >
        <path
          d="M27 3a2 2 0 0 1 1.995 1.85L29 5l-.001 14.816 2.43 6.482a2 2 0 0 1-.881 2.44l-.145.074-.144.06a2 2 0 0 1-.523.12l-.179.008H2.443a2 2 0 0 1-1.928-2.532l.055-.17L3 19.819 3 5a2 2 0 0 1 1.697-1.977l.154-.018L5 3zm.306 18H4.692l-2.249 6h27.114zM19 23v2h-6v-2zm8-18H5l-.001 14h22zM16 7a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"
        />
      </svg>
    </div>
    <div
      className="m-b--12"
    >
      <h3
        className="size--16"
      >
        Join a video call
      </h3>
    </div>
    <div
      className="m-b--12"
    >
      <p
        className="size--14"
      >
        Download Zoom for free on a desktop or mobile device. After you book, you’ll receive an email with a link and details on how to join.
      </p>
    </div>
    <div>
      <h3
        className="size--16"
      >
        <u>
          Show more
        </u>
      </h3>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules/Card Review 1`] = `
<div
  data-testid="review-card"
>
  <div
    className="p-v--12"
  >
    <div
      className="flex items-center p-b--8"
    >
      <div
        style={
          Object {
            "borderRadius": 9999,
            "height": 55,
            "width": 55,
          }
        }
      >
        <img
          src="https://a0.muscache.com/im/pictures/user/04d3499b-6cca-4d1a-acc4-1fc4444e1002.jpg?im_w=240"
          style={
            Object {
              "borderRadius": 9999,
            }
          }
        />
      </div>
      <div
        className="m-l--12 p-b--8 flex items-center"
      >
        <div
          className="flex flex-col"
        >
          <p
            className="c--gray__3"
          >
            Maureen
          </p>
          <p
            className="size--14 c--gray__1 weight--300"
          >
            October 2019
          </p>
        </div>
      </div>
    </div>
    <div
      className="m-v--12"
    >
      <p
        className="weight--100 lh--15"
      >
        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s. Lorem Ipsum is simply dummy...
        <span
          className="inline-block m-l--6"
        >
          <div
            className="bg--transparent size--16"
            onClick={[Function]}
          >
            <u>
              read more
            </u>
          </div>
        </span>
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules/Card Set 1`] = `
<div
  data-testid="set-card"
>
  <div
    className="br--15 b--white__2"
  >
    <div
      className="w--full btr--15 h--8 bg--green__1"
    />
    <div
      className="p--15"
    >
      <div
        className="flex"
      >
        <div
          className="m-r--12"
        >
          <svg
            fill="#268A04"
            viewBox="0 0 32 32"
            width={18}
          >
            <path
              d="M16 1C7.729 1 1 7.729 1 16s6.729 15 15 15 15-6.729 15-15S24.271 1 16 1zm-2.5 22.621L6.879 17 9 14.879l4.5 4.5 9.5-9.5L25.121 12 13.5 23.621z"
            />
          </svg>
        </div>
        <div>
          <div
            className="m-b--4"
          >
            <h3
              className="size--16"
            >
              You're all set!
            </h3>
          </div>
          <div>
            <p
              className="size--14 c--gray__1"
            >
              This helps us keep your account secure
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules/Card Sharing 1`] = `
<div
  data-testid="sharing-card"
>
  <div>
    <div>
      <img
        src="https://a0.muscache.com/pictures/1f129c2b-4da0-463e-a918-ff3f9f8fa325.jpg"
      />
    </div>
    <div
      className="m-v--8"
    >
      <h3>
        Meditate with Sheep
      </h3>
    </div>
    <div
      className="m-b--8"
    >
      <p
        className="size--14 lh--15"
      >
        Mindfulness straight from a Scottish farm, accompanied by encounters with some fuzzy friends.
      </p>
    </div>
    <div>
      <p
        className="size--14 c--darkgreen__3"
      >
        Go to experience
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules/Card Stay 1`] = `
<div
  data-testid="stay-card"
>
  <div>
    <div
      className="b_to_n--sm m-b--32--sm"
    >
      <div
        data-testid="horizontal-card"
      >
        <div>
          <div
            style={
              Object {
                "paddingTop": "66.6%",
                "position": "relative",
              }
            }
          >
            <div
              style={
                Object {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                }
              }
            >
              <div
                style={
                  Object {
                    "height": "100%",
                  }
                }
              >
                <div
                  className="relative h--full"
                >
                  <div
                    className="br--12 h--full"
                  >
                    <div
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      style={
                        Object {
                          "borderRadius": 12,
                          "height": "100%",
                          "overflow": "hidden",
                          "position": "relative",
                          "width": "100%",
                          "zIndex": 50,
                        }
                      }
                    >
                      <div
                        style={
                          Object {
                            "borderRadius": 12,
                            "display": "flex",
                            "height": "100%",
                            "transform": "translateX(-0px)",
                            "transition": "transform ease-out 0.45s",
                            "width": 3000,
                          }
                        }
                      >
                        <div
                          style={
                            Object {
                              "backgroundImage": "url(https://a0.muscache.com/im/pictures/7e0063fa-d325-49ae-a6f6-285fe9928da4.jpg?im_w=720)",
                              "backgroundPosition": "center",
                              "backgroundRepeat": "no-repeat",
                              "backgroundSize": "cover",
                              "height": "100%",
                              "width": "100%",
                            }
                          }
                        />
                        <div
                          style={
                            Object {
                              "backgroundImage": "url(https://a0.muscache.com/im/pictures/682aa552-1a91-4736-86a2-3d12cb316d07.jpg?im_w=720)",
                              "backgroundPosition": "center",
                              "backgroundRepeat": "no-repeat",
                              "backgroundSize": "cover",
                              "height": "100%",
                              "width": "100%",
                            }
                          }
                        />
                        <div
                          style={
                            Object {
                              "backgroundImage": "url(https://a0.muscache.com/im/pictures/924798e4-2fe1-47de-9636-947332829bcc.jpg?im_w=720)",
                              "backgroundPosition": "center",
                              "backgroundRepeat": "no-repeat",
                              "backgroundSize": "cover",
                              "height": "100%",
                              "width": "100%",
                            }
                          }
                        />
                      </div>
                      <div
                        style={
                          Object {
                            "left": 10,
                            "opacity": 0,
                            "position": "absolute",
                            "top": "50%",
                            "transform": "translateY(-50%)",
                            "transition": "opacity 0.2s ease-out",
                            "zIndex": 60,
                          }
                        }
                      >
                        <button
                          className=" inline-block transition"
                          data-testid="paginate-button--atom"
                          onClick={[Function]}
                          style={
                            Object {
                              "cursor": "pointer",
                            }
                          }
                        >
                          <div
                            className="bg__paginate p--8 b--white__2 br--circle"
                          >
                            <svg
                              viewBox="0 0 32 32"
                              width={10}
                            >
                              <g
                                fill="none"
                              >
                                <path
                                  d="m20 28-11.29289322-11.2928932c-.39052429-.3905243-.39052429-1.0236893 0-1.4142136l11.29289322-11.2928932"
                                  stroke="black"
                                  strokeWidth={5}
                                />
                              </g>
                            </svg>
                          </div>
                        </button>
                      </div>
                      <div
                        style={
                          Object {
                            "opacity": 0,
                            "position": "absolute",
                            "right": 10,
                            "top": "50%",
                            "transform": "translateY(-50%)",
                            "transition": "opacity 0.2s ease-out",
                            "zIndex": 60,
                          }
                        }
                      >
                        <button
                          className=" inline-block transition"
                          data-testid="paginate-button--atom"
                          onClick={[Function]}
                          style={
                            Object {
                              "cursor": "pointer",
                            }
                          }
                        >
                          <div
                            className="bg__paginate p--8 b--white__2 br--circle"
                          >
                            <svg
                              stroke="black"
                              strokeWidth={5}
                              viewBox="0 0 32 32"
                              width={10}
                            >
                              <g
                                fill="none"
                              >
                                <path
                                  d="m12 4 11.2928932 11.2928932c.3905243.3905243.3905243 1.0236893 0 1.4142136l-11.2928932 11.2928932"
                                />
                              </g>
                            </svg>
                          </div>
                        </button>
                      </div>
                      <div
                        className="dots"
                        style={
                          Object {
                            "opacity": 0,
                            "transition": "opacity 0.2s ease-out",
                          }
                        }
                      >
                        <div
                          style={
                            Object {
                              "alignItems": "center",
                              "bottom": 25,
                              "display": "flex",
                              "justifyContent": "center",
                              "position": "absolute",
                              "width": "100%",
                            }
                          }
                        >
                          <span
                            style={
                              Object {
                                "background": "white",
                                "borderRadius": "50%",
                                "cursor": "pointer",
                                "marginRight": 5,
                                "padding": 3,
                                "transition": "all 0.2s ease-in",
                              }
                            }
                          />
                          <span
                            style={
                              Object {
                                "background": "lightgray",
                                "borderRadius": "50%",
                                "cursor": "pointer",
                                "marginRight": 5,
                                "padding": 3,
                                "transition": "all 0.2s ease-in",
                              }
                            }
                          />
                          <span
                            style={
                              Object {
                                "background": "lightgray",
                                "borderRadius": "50%",
                                "cursor": "pointer",
                                "marginRight": 5,
                                "padding": 3,
                                "transition": "all 0.2s ease-in",
                              }
                            }
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    className="p-v--8 p-h--10 at--0 justify-between w--full"
                  >
                    <div
                      className="c--white hidden"
                      style={
                        Object {
                          "zIndex": 50,
                        }
                      }
                    >
                      <div
                        className="p-h--8 p-v--4 bg--white__1 shadow--lg br--3"
                      >
                        <h3
                          className="size--12 uppercase ls--3"
                        >
                          Superhost
                        </h3>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            style={
              Object {
                "display": "flex",
                "marginTop": 6,
              }
            }
          >
            <div
              className="m-r--3"
            >
              <svg
                fill="#F5385D"
                viewBox="0 0 1000 1000"
                width={14}
              >
                <path
                  d="M972 380c9 28 2 50-20 67L725 619l87 280c11 39-18 75-54 75-12 0-23-4-33-12L499 790 273 962a58 58 0 0 1-78-12 50 50 0 0 1-8-51l86-278L46 447c-21-17-28-39-19-67 8-24 29-40 52-40h280l87-279c7-23 28-39 52-39 25 0 47 17 54 41l87 277h280c24 0 45 16 53 40z"
                />
              </svg>
            </div>
            <div
              className="m-r--3"
            >
              <p
                className="weight--100 size--13"
              >
                5.00
              </p>
            </div>
            <div>
              <p
                className="weight--100 size--13 c--gray__0"
              >
                (100)
              </p>
            </div>
          </div>
          <div
            className="flex items-center"
          >
            <div>
              <p
                className="ls--4 weight--100 size--15 c--gray__4"
                style={
                  Object {
                    "textTransform": "capitalize",
                  }
                }
              >
                Type of Stay
              </p>
            </div>
            <div>
              <p>
                  ·   
              </p>
            </div>
            <div>
              <p
                className="ls--4 weight--100 size--15 c--gray__4"
              >
                Location
              </p>
            </div>
          </div>
          <div>
            <p
              className="ls--4 weight--100 size--15 c--gray__4"
              style={
                Object {
                  "maxHeight": 250,
                  "overflow": "hidden",
                  "textOverflow": "ellipsis",
                  "whiteSpace": "nowrap",
                }
              }
            >
              Title should be here
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      className="n_to_b--sm"
    >
      <div
        className="p-v--22"
      >
        <div
          className="flex justify-between"
        >
          <div
            className="flex"
          >
            <div
              className="w--300 min-h--200 m-r--15"
            >
              <div
                className="br--12 h--full"
              >
                <div
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  style={
                    Object {
                      "borderRadius": 12,
                      "height": "100%",
                      "overflow": "hidden",
                      "position": "relative",
                      "width": "100%",
                      "zIndex": 50,
                    }
                  }
                >
                  <div
                    style={
                      Object {
                        "borderRadius": 12,
                        "display": "flex",
                        "height": "100%",
                        "transform": "translateX(-0px)",
                        "transition": "transform ease-out 0.45s",
                        "width": 3000,
                      }
                    }
                  >
                    <div
                      style={
                        Object {
                          "backgroundImage": "url(https://a0.muscache.com/im/pictures/miso/Hosting-46142496/original/f81fdaca-1791-4de6-ba56-d3e5ce9406d1.jpeg?im_w=720)",
                          "backgroundPosition": "center",
                          "backgroundRepeat": "no-repeat",
                          "backgroundSize": "cover",
                          "height": "100%",
                          "width": "100%",
                        }
                      }
                    />
                    <div
                      style={
                        Object {
                          "backgroundImage": "url(https://a0.muscache.com/im/pictures/miso/Hosting-46142496/original/f81fdaca-1791-4de6-ba56-d3e5ce9406d1.jpeg?im_w=720)",
                          "backgroundPosition": "center",
                          "backgroundRepeat": "no-repeat",
                          "backgroundSize": "cover",
                          "height": "100%",
                          "width": "100%",
                        }
                      }
                    />
                    <div
                      style={
                        Object {
                          "backgroundImage": "url(https://a0.muscache.com/im/pictures/miso/Hosting-46142496/original/f81fdaca-1791-4de6-ba56-d3e5ce9406d1.jpeg?im_w=720)",
                          "backgroundPosition": "center",
                          "backgroundRepeat": "no-repeat",
                          "backgroundSize": "cover",
                          "height": "100%",
                          "width": "100%",
                        }
                      }
                    />
                  </div>
                  <div
                    style={
                      Object {
                        "left": 10,
                        "opacity": 0,
                        "position": "absolute",
                        "top": "50%",
                        "transform": "translateY(-50%)",
                        "transition": "opacity 0.2s ease-out",
                        "zIndex": 60,
                      }
                    }
                  >
                    <button
                      className=" inline-block transition"
                      data-testid="paginate-button--atom"
                      onClick={[Function]}
                      style={
                        Object {
                          "cursor": "pointer",
                        }
                      }
                    >
                      <div
                        className="bg__paginate p--8 b--white__2 br--circle"
                      >
                        <svg
                          viewBox="0 0 32 32"
                          width={10}
                        >
                          <g
                            fill="none"
                          >
                            <path
                              d="m20 28-11.29289322-11.2928932c-.39052429-.3905243-.39052429-1.0236893 0-1.4142136l11.29289322-11.2928932"
                              stroke="black"
                              strokeWidth={5}
                            />
                          </g>
                        </svg>
                      </div>
                    </button>
                  </div>
                  <div
                    style={
                      Object {
                        "opacity": 0,
                        "position": "absolute",
                        "right": 10,
                        "top": "50%",
                        "transform": "translateY(-50%)",
                        "transition": "opacity 0.2s ease-out",
                        "zIndex": 60,
                      }
                    }
                  >
                    <button
                      className=" inline-block transition"
                      data-testid="paginate-button--atom"
                      onClick={[Function]}
                      style={
                        Object {
                          "cursor": "pointer",
                        }
                      }
                    >
                      <div
                        className="bg__paginate p--8 b--white__2 br--circle"
                      >
                        <svg
                          stroke="black"
                          strokeWidth={5}
                          viewBox="0 0 32 32"
                          width={10}
                        >
                          <g
                            fill="none"
                          >
                            <path
                              d="m12 4 11.2928932 11.2928932c.3905243.3905243.3905243 1.0236893 0 1.4142136l-11.2928932 11.2928932"
                            />
                          </g>
                        </svg>
                      </div>
                    </button>
                  </div>
                  <div
                    className="dots"
                    style={
                      Object {
                        "opacity": 0,
                        "transition": "opacity 0.2s ease-out",
                      }
                    }
                  >
                    <div
                      style={
                        Object {
                          "alignItems": "center",
                          "bottom": 25,
                          "display": "flex",
                          "justifyContent": "center",
                          "position": "absolute",
                          "width": "100%",
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "background": "white",
                            "borderRadius": "50%",
                            "cursor": "pointer",
                            "marginRight": 5,
                            "padding": 3,
                            "transition": "all 0.2s ease-in",
                          }
                        }
                      />
                      <span
                        style={
                          Object {
                            "background": "lightgray",
                            "borderRadius": "50%",
                            "cursor": "pointer",
                            "marginRight": 5,
                            "padding": 3,
                            "transition": "all 0.2s ease-in",
                          }
                        }
                      />
                      <span
                        style={
                          Object {
                            "background": "lightgray",
                            "borderRadius": "50%",
                            "cursor": "pointer",
                            "marginRight": 5,
                            "padding": 3,
                            "transition": "all 0.2s ease-in",
                          }
                        }
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="flex flex-col justify-between"
            >
              <div>
                <p
                  className="c--gray__1 size--14"
                >
                  Entire apartment
                   in 
                  Vacation
                </p>
                <h4
                  className="weight--300 m-v--4 size--17"
                >
                  Exquisite Home In The Heart Of YALETOWN
                </h4>
                <div
                  className="bg--white__2 m-v--8 w--45 h--1"
                />
                <div>
                  <span
                    className="c--gray__1 size--14"
                  >
                    1
                     guests
                  </span>
                  <span
                    className="c--gray__1 size--14"
                  >
                     
                    ·
                     
                  </span>
                  <span
                    className="c--gray__1 size--14"
                  >
                    1
                     bedroom
                  </span>
                  <span
                    className="c--gray__1 size--14"
                  >
                     
                    ·
                     
                  </span>
                  <span
                    className="c--gray__1 size--14"
                  >
                    1
                     beds
                  </span>
                  <span
                    className="c--gray__1 size--14"
                  >
                     
                    ·
                     
                  </span>
                  <span
                    className="c--gray__1 size--14"
                  >
                    1
                     bath
                  </span>
                </div>
                <div>
                  <span
                    className="c--gray__1 size--14"
                  >
                    wifi
                  </span>
                </div>
              </div>
              <div>
                <div
                  data-testid="rating-bullet--atom"
                >
                  <div
                    className="flex flex"
                  >
                    <div>
                      <svg
                        height={14}
                        style={
                          Object {
                            "fill": "#E61E4D",
                            "marginBottom": 1,
                          }
                        }
                        viewBox="0 0 37.286 37.287"
                      >
                        <g>
                          <path
                            d="M36.683,16.339l-7.567,7.377l1.786,10.417c0.128,0.75-0.182,1.509-0.797,1.957c-0.348,0.253-0.762,0.382-1.176,0.382
c-0.318,0-0.638-0.076-0.931-0.23l-9.355-4.918l-9.355,4.918c-0.674,0.355-1.49,0.295-2.107-0.15
c-0.615-0.448-0.924-1.206-0.795-1.957l1.787-10.417L0.604,16.34c-0.547-0.531-0.741-1.326-0.508-2.05
c0.236-0.724,0.861-1.251,1.615-1.361l10.459-1.521l4.68-9.478c0.335-0.684,1.031-1.116,1.792-1.116
c0.763,0,1.456,0.432,1.793,1.115l4.68,9.478l10.461,1.521c0.752,0.109,1.379,0.637,1.611,1.361
C37.425,15.013,37.226,15.808,36.683,16.339z"
                          />
                        </g>
                      </svg>
                    </div>
                    <h3
                      className="p-l--4 c--g__2 size--14"
                    >
                      5
                    </h3>
                    <span
                      className="p-l--4 c--gray__1 size--14 weight--100"
                    >
                      (
                      100
                      )
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div>
            <svg
              fill="white"
              stroke="black"
              strokeWidth={2}
              viewBox="0 0 32 32"
              width={24}
            >
              <path
                d="m16 28c7-4.733 14-10 14-17 0-1.792-.683-3.583-2.05-4.95-1.367-1.366-3.158-2.05-4.95-2.05-1.791 0-3.583.684-4.949 2.05l-2.051 2.051-2.05-2.051c-1.367-1.366-3.158-2.05-4.95-2.05-1.791 0-3.583.684-4.949 2.05-1.367 1.367-2.051 3.158-2.051 4.95 0 7 7 12.267 14 17z"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules/Card Type Stay 1`] = `
<div
  style={
    Object {
      "width": 200,
    }
  }
>
  <div
    data-testid="typestay-card"
  >
    <div
      className="block h--full w--full m-r--8"
    >
      <div
        className="br--12 shadow--sm"
      >
        <div
          style={
            Object {
              "paddingTop": "66.6667%",
              "position": "relative",
            }
          }
        >
          <div
            style={
              Object {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          >
            <picture>
              <source
                srcSet="https://a0.muscache.com/im/pictures/175f945a-a4ac-416c-bb10-7e49a927c42f.jpg?im_w=720"
              />
              <img
                decoding="async"
                src="https://a0.muscache.com/im/pictures/175f945a-a4ac-416c-bb10-7e49a927c42f.jpg?im_w=720"
                style={
                  Object {
                    "borderTopLeftRadius": 12,
                    "borderTopRightRadius": 12,
                    "objectFit": "cover",
                  }
                }
              />
            </picture>
          </div>
        </div>
        <div
          className="h__card"
          style={
            Object {
              "backgroundColor": "white",
              "borderBottomLeftRadius": 12,
              "borderBottomRightRadius": 12,
              "padding": 16,
            }
          }
        >
          <p
            className="weight--500 size--14 c--gray__3"
          >
            Type
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules/Card Vertical 1`] = `
<div
  data-testid="vertical-card"
>
  <div
    className="w__vertical"
  >
    <div
      className="relative"
    >
      <img
        className="br--12"
        src="https://a0.muscache.com/im/pictures/lombard/MtTemplate-1659111-active_media/original/4931efc9-f708-4619-9b25-51036194e1e1.jpg?aki_policy=poster"
      />
      <div
        className="flex p-v--8 p-h--10 at--0 justify-between w--full"
      >
        <div
          className="c--white hidden"
        >
          <div
            className="p-h--8 p-v--4 bg--white__1 shadow--lg br--3"
          >
            <p
              className="size--12 uppercase ls--3"
            >
              Superhost
            </p>
          </div>
        </div>
        <div
          className="c--white hidden"
        >
          <svg
            fill="rgba(0, 0, 0, 0.5)"
            stroke="rgb(255, 255, 255)"
            strokeWidth={2}
            viewBox="0 0 32 32"
            width={24}
          >
            <path
              d="m16 28c7-4.733 14-10 14-17 0-1.792-.683-3.583-2.05-4.95-1.367-1.366-3.158-2.05-4.95-2.05-1.791 0-3.583.684-4.949 2.05l-2.051 2.051-2.05-2.051c-1.367-1.366-3.158-2.05-4.95-2.05-1.791 0-3.583.684-4.949 2.05-1.367 1.367-2.051 3.158-2.051 4.95 0 7 7 12.267 14 17z"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      className="flex items-center"
    >
      <div
        className="m-r--3"
      >
        <svg
          style={
            Object {
              "fill": "#E61E4D",
              "marginBottom": 1,
            }
          }
          viewBox="0 0 37.286 37.287"
          width={15}
        >
          <g>
            <path
              d="M36.683,16.339l-7.567,7.377l1.786,10.417c0.128,0.75-0.182,1.509-0.797,1.957c-0.348,0.253-0.762,0.382-1.176,0.382
c-0.318,0-0.638-0.076-0.931-0.23l-9.355-4.918l-9.355,4.918c-0.674,0.355-1.49,0.295-2.107-0.15
c-0.615-0.448-0.924-1.206-0.795-1.957l1.787-10.417L0.604,16.34c-0.547-0.531-0.741-1.326-0.508-2.05
c0.236-0.724,0.861-1.251,1.615-1.361l10.459-1.521l4.68-9.478c0.335-0.684,1.031-1.116,1.792-1.116
c0.763,0,1.456,0.432,1.793,1.115l4.68,9.478l10.461,1.521c0.752,0.109,1.379,0.637,1.611,1.361
C37.425,15.013,37.226,15.808,36.683,16.339z"
            />
          </g>
        </svg>
      </div>
      <div
        className="m-r--3"
      >
        <p
          className="weight--100 size--13"
        >
          5
        </p>
      </div>
      <div>
        <p
          className="weight--100 size--13 c--gray__0"
        >
          (100)
        </p>
      </div>
      <div>
        <p
          className="c--gray__0"
        >
            ·   
        </p>
      </div>
      <div>
        <p
          className="size--13 weight--100 c--gray__0"
        >
          Country
        </p>
      </div>
    </div>
    <div>
      <p
        className="ls--4 weight--100 size--15 c--gray__4"
      >
        Title should be here
      </p>
    </div>
    <div>
      <p
        className="weight--100"
      >
        <span
          className="weight--500"
        >
          From $
          100
        </span>
        /person
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules/Card Works 1`] = `
<div
  data-testid="works-card"
>
  <div>
    <div
      className="display__works"
    >
      <div
        className="w__works"
      >
        <img
          alt="works image"
          src="https://a0.muscache.com/pictures/54019d2c-f00e-4d2b-9eb2-7b738e6b9eb8.jpg"
        />
      </div>
      <div
        className="w__works"
      >
        <div
          className="m-b--16"
        >
          <h3>
            Design your experience
          </h3>
        </div>
        <div>
          <p
            className="size--13"
          >
            All experiences start with our quality standards—expertise, access, and connection. But also think about how to engage with guests online, and minimize the supplies they might need to participate. When you have an idea, start the submission process.
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Particles/Animation Loading 1`] = `
<div
  data-testid="animation"
>
  <div
    className="circle__wrapper"
  >
    <span
      className="circle__content circle__1 bg--white"
    />
    <span
      className="circle__content circle__2 bg--white"
    />
    <span
      className="circle__content circle__3 bg--white"
    />
  </div>
</div>
`;
